# dot-slash-main.cpp

./: CMakeLists.txt  README.md
debugging/multiple_definitions/: Makefile  bar.cpp  bil.cpp  lib.cpp  main.cpp
debugging/undefined_reference/: .gitignore  Makefile  class.cpp  class.h  lib.cpp  lib.h  vtable.cpp
examples/minimal/: .gitignore  a.out  main.cpp
examples/simple_cmake/: main.cpp
hello_world/: .gitignore  Makefile  bar.cpp  foo.cpp  foo.h  main.cpp
reckless_headers/: CMakeLists.txt  careful.cpp  reckless.cpp  time-it.sh
